# tranqui

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start_app.sh
api/: main.py  models.py  routes.py
config/: __init__.py  assets.py  settings.py
results/: benchmark_results.json
src/: __init__.py
src/data/: __init__.py  data_engine.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/explanation/: __init__.py  coach_engine.py
src/optimization/: __init__.py  classical_solver.py  quantum_solver.py  qubo_engine.py
src/visualization/: __init__.py
tests/: __init__.py  test_qubo.py  test_solvers.py
web/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
web/components/: ProgressBar.tsx
web/screens/: Chat.tsx  ClarityScore.tsx  EmailSent.tsx  ForgotPassword.tsx  GoalsSelection.tsx  Login.tsx  ProfileInput.tsx  QuantumLab.tsx  Signup.tsx  SocialProof.tsx  StressQuestion.tsx  Welcome.tsx
web/services/: api.ts  auth.ts  authService.ts  geminiService.ts
web/src/: firebase.ts
